# ApplicationManager

./: ChangeLog  Makefile.am  README.md  appmgr.pc.in  autogen.sh  configure.ac
docs/: Doxyfile.in  footer.html  header.html
src/: Makefile.am  clp-app-mgr-config.h  clp-app-mgr-lib.h  clp-app-mgr.conf.in  clp-app-mgr.h  limo-app-mgr-lib.c
tools/: Makefile.am  clp-app-mgr-app-launcher.c
